# koe

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md
.github/scripts/: update-feeds.py
.github/workflows/: release.yml
KoeApp/: project.yml
KoeApp/Koe/: Info.plist
KoeApp/Koe/AppDelegate/: SPAppDelegate.h  SPAppDelegate.m  SPAppDelegateLogicTests.m
KoeApp/Koe/Audio/: SPAudioCaptureManager.h  SPAudioCaptureManager.m  SPAudioDeviceManager.h  SPAudioDeviceManager.m
KoeApp/Koe/Bridge/: SPRustBridge.h  SPRustBridge.m
KoeApp/Koe/Clipboard/: SPClipboardManager.m
KoeApp/Koe/Hotkey/: SPHotkeyMonitor.h  SPHotkeyMonitor.m
KoeApp/Koe/Localization/: SPLocalization.h  SPLocalization.m
KoeApp/Koe/Overlay/: SPOverlayPanel.h  SPOverlayPanel.m
KoeApp/Koe/Paste/: SPPasteManager.h  SPPasteManager.m
KoeApp/Koe/Permissions/: SPPermissionManager.h  SPPermissionManager.m
KoeApp/Koe/SetupWizard/: SPSetupWizardWindowController.m
KoeApp/Koe/StatusBar/: SPStatusBarManager.h  SPStatusBarManager.m
KoeApp/Koe/Update/: SPUpdateManager.m
KoeApp/Koe/en.lproj/: Localizable.strings
KoeApp/Koe/zh-Hans.lproj/: Localizable.strings
docs/: appcast-mlx.xml  appcast.xml  update-feed.json
koe-asr/: Cargo.toml  README.md
koe-asr/src/: apple_speech.rs  doubao.rs  doubaoime.rs  glm.rs  lib.rs  mimo.rs  qwen.rs  transcript.rs
koe-asr/tests/: transcript_test.rs
koe-cli/: Cargo.toml
koe-cli/src/: benchmark.rs  main.rs
koe-core/: Cargo.toml
koe-core/src/: asr_factory.rs  config.rs  default_user_prompt.txt  dictionary.rs  ffi.rs  lib.rs  model_manager.rs  prompt.rs  session.rs  telemetry.rs
koe-core/src/llm/: mlx.rs  mod.rs  openai_compatible.rs
skills/koe-setup/: SKILL.md
