[package]
name = "koe-asr"
description = "Streaming ASR (Automatic Speech Recognition) client for Volcengine/Doubao and Aliyun"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
flate2.workspace = true
futures-util.workspace = true
log.workspace = true
rustls = { workspace = true, default-features = false, features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sherpa-onnx = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
uuid = { workspace = true, features = ["v4"] }

[features]
default = []
mlx = []
sherpa-onnx = ["dep:sherpa-onnx"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
