[package]
name = "koe-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "koe_core"
crate-type = ["staticlib", "lib"]

[features]
default = ["mlx", "apple-speech", "sherpa-onnx"]
mlx = ["koe-asr/mlx"]
apple-speech = ["koe-asr/apple-speech"]
sherpa-onnx = ["koe-asr/sherpa-onnx"]

[dependencies]
koe-asr = { path = "../koe-asr" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2", "stream", "system-proxy"], default-features = false }
sha2 = "0.10"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["rt"] }
urlencoding = "2"

[dev-dependencies]
async-trait = "0.1"

[build-dependencies]
cbindgen = "0.27"
